--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.6.0
   cloud_firestore:
   firebase_database: ^11.1.4
+  firebase_auth: 
+
 
 dev_dependencies:
   flutter_test:
